# intro_ai

./: .gitignore  Makefile  Modelfile  README.md  basic_chat.py  langchain_add_files.py  langchain_summarize.py  pyproject.toml  synthetic_data.py
conversation/: app.py
