[tool.poetry]
name = "intro-ai"
version = "0.1.0"
description = ""
authors = ["Enrique Sanchez <je.sanchezb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ruff = "^0.1.12"
requests = "^2.31.0"
langchain = "^0.1.0"
langchain-community = "^0.0.11"
bs4 = "^0.0.1"
gpt4all = "^2.0.2"
chromadb = "^0.4.22"
unstructured = "^0.12.0"
pdf2image = "^1.17.0"
pdfminer = "^20191125"
langchain_experimental = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
